syntax = "proto3";

message ReleaseControl {

}
